--- a/style.css
+++ b/style.css
@@ -156,8 +156,10 @@ a:hover {
 
 .Button {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 button {
