--- a/style.css
+++ b/style.css
@@ -12,6 +12,21 @@ body {
   align-items: center;
 }
 
+.logo {
+  font-family: "Poppins", sans-serif;
+  width: 70px;
+  display: flex;
+  flex-direction: row;
+  margin-right: 85px;
+}
+
+.logo h3 {
+  position: absolute;
+  margin-top: 20px;
+  margin-left: 57px;
+  color: #0464ff;
+}
+
 .page {
   width: 100%;
   max-width: 1300px;
@@ -23,9 +38,11 @@ body {
   padding: 75px;
   border-radius: 20px;
 }
+
 .left {
   display: flex;
   flex-direction: column;
+  margin-bottom: 60px;
 }
 
 .qoute {
@@ -36,7 +53,6 @@ body {
   position: absolute;
   z-index: 1;
   margin-top: 25px;
-  margin-bottom: px;
 }
 
 .left h1 {
@@ -78,7 +94,7 @@ body {
 .container {
   width: 450px;
   background-color: #f9fafd;
-  padding: 40px;
+  padding: 5px 40px 40px 40px;
   border-radius: 15px;
   box-shadow: 0 14px 28px rgb(63, 63, 63);
 }
@@ -92,11 +108,11 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  gap: 15px;
 }
 
 .header h2 {
   color: #00226f;
+  margin-bottom: 15px;
 }
 .name {
   display: flex;
