--- a/dashboard.css
+++ b/dashboard.css
@@ -296,6 +296,12 @@ button:hover {
   animation: card3Anim 1s ease-in-out forwards;
 }
 
+#card4 {
+  z-index: 4;
+  background-image: url(images/card1.png);
+  animation: card4Anim 1s ease-in-out forwards;
+}
+
 @keyframes card1Anim {
   from {
     transform: translateX(0px) rotate(0deg);
@@ -320,6 +326,15 @@ button:hover {
   }
   to {
     transform: translateX(-50px) translateY(10px) rotate(-25deg);
+  }
+}
+
+@keyframes card4Anim {
+  from {
+    transform: translateX(0px) rotate(0deg);
+  }
+  to {
+    transform: translateX(60px) translateY(20px) rotate(25deg);
   }
 }
 
