--- a/dashboard.css
+++ b/dashboard.css
@@ -175,10 +175,6 @@ a {
   background-color: white;
 }
 
-.inputs::-webkit-scrollbar {
-  display: none;
-}
-
 .inputs .Personal {
   display: flex;
   flex-direction: column;
@@ -348,15 +344,16 @@ button:hover {
 .balance {
   width: 100%;
   background-color: white;
-  height: 250px;
+  height: 414px;
   border-radius: 20px;
   padding: 20px;
 }
 .transaction {
   width: 100%;
   background-color: white;
-  height: 250px;
+  height: 414px;
   border-radius: 20px;
+  overflow-y: auto;
   padding: 20px;
 }
 
@@ -443,7 +440,13 @@ button:hover {
 
 .settings-container {
   padding: 20px;
-  max-width: 1200px;
+  width: 1330px;
+  max-height: 660px;
+  overflow-y: auto;
+}
+
+.settings-container::-webkit-scrollbar {
+  display: none;
 }
 
 .settings-section {
@@ -662,17 +665,17 @@ td.amount-received {
 }
 
 .transaction-nav .filter-btn {
-  padding: 8px 16px;
-  margin-right: 10px;
+  padding: 10px;
+  width: 200px;
   border: none;
   background-color: #f0f0f0;
   cursor: pointer;
   border-radius: 5px;
   font-weight: bold;
-  transition: background-color 0.2s;
+  transition: background-color 0.3s, letter-spacing 0.5s;
 }
 
 .transaction-nav .filter-btn.active {
-  background-color: #007bff;
+  background-color: #00226f;
   color: white;
 }
