--- a/dashboard.css
+++ b/dashboard.css
@@ -152,6 +152,7 @@ a {
   background-color: white;
   border-radius: 10px;
   max-width: 1272px;
+  height: 610px;
   margin: 30px;
 }
 
@@ -425,6 +426,61 @@ button:hover {
 
 .confirm-btn:hover {
   background-color: red;
+}
+
+.modal1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+.modal-content1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+  max-width: 1272px;
+  margin: 30px;
+}
+
+.modal-content1 h2 {
+  color: #00226f;
+  margin-bottom: 15px;
+}
+
+.modal-content1 p {
+  margin-bottom: 20px;
+}
+
+.modal-content1 input {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 7px;
+  border: 2px solid black;
+  font-size: 14px;
+  padding: 14px;
+  margin-bottom: 20px;
+}
+
+.modal-content1 button {
+  width: 100%;
+  max-width: 150px;
+  font-size: 14px;
+  border: none;
+  border-radius: 7px;
+  background-color: #00226f;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 @keyframes popUp {
