--- a/style.css
+++ b/style.css
@@ -129,7 +129,8 @@ body {
 }
 
 .email input,
-.password input {
+.password input,
+.phone input {
   width: 100%;
   border-radius: 7px;
   border: 2px solid black;
