--- a/dashboard.css
+++ b/dashboard.css
@@ -128,6 +128,7 @@ a {
   padding: 20px 50px 20px 20px;
   margin-bottom: 5px;
   gap: 20px;
+  margin-right: 10px;
 }
 
 .profile i {
@@ -275,6 +276,10 @@ select {
 button:hover {
   background-color: hsl(220, 92%, 38%);
   letter-spacing: 1px;
+}
+
+.next-btn:hover {
+  background-color: hsl(220, 92%, 38%);
 }
 
 .credit-card {
@@ -494,13 +499,6 @@ button:hover {
   align-items: center;
   padding: 15px 0;
   border-bottom: 1px solid #f5f5f5;
-}
-
-.settings-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
 }
 
 .setting-item:last-child {
@@ -831,6 +829,12 @@ td.amount-received {
   font-size: 18px;
   margin-top: 10px;
   border-bottom: 1px solid #9a9a9a;
+}
+
+.profile-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .inbox a {
