--- a/admin.css
+++ b/admin.css
@@ -349,8 +349,16 @@ a {
 }
 
 .close-btn {
-  margin-top: 20px;
-  background-color: #aaa;
+  flex: 1;
+  width: 150px;
+  font-size: 14px;
+  border: none;
+  border-radius: 7px;
+  background-color: #00226f;
+  padding: 12px;
+  transition: background-color 0.3s, letter-spacing 0.5s;
+  color: #ffffff;
+  cursor: pointer;
 }
 
 .close-btn:hover {
@@ -379,21 +387,26 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
   justify-content: center;
   align-items: center;
-  overflow: auto; /* scrollable if content is tall */
-  z-index: 1000;
+  z-index: 2000;
 }
 
-.modal1-content {
-  background: #fff;
+.modal-content-loan {
+  background: white;
   padding: 20px;
+  width: 500px;
+  max-height: 90vh;
+  overflow-y: auto;
   border-radius: 10px;
-  max-width: 600px;
-  width: 90%;
-  max-height: 80vh; /* limit height */
-  overflow-y: auto; /* enable vertical scrolling */
+}
+
+.modal-img {
+  width: 100%;
+  height: auto;
+  border: 1px solid #aaa;
+  margin-bottom: 20px;
 }
 
 .modal-documents {
